--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "google-map-react": "^1.1.6",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-calendar": "^2.19.2",
